WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
284431
Fix build failure from
287634@main
https://bugs.webkit.org/show_bug.cgi?id=284431
Summary
Fix build failure from 287634@main
daniel_liu4
Reported
2024-12-10 18:02:03 PST
Fix a build failure because JIT operations were not properly registered in the list.
Attachments
Add attachment
proposed patch, testcase, etc.
daniel_liu4
Comment 1
2024-12-10 18:02:07 PST
rdar://141251913
daniel_liu4
Comment 2
2024-12-10 18:03:53 PST
Pull request:
https://github.com/WebKit/WebKit/pull/37752
EWS
Comment 3
2024-12-10 18:10:10 PST
Committed
287647@main
(b11c253b7d4b): <
https://commits.webkit.org/287647@main
> Reviewed commits have been landed. Closing PR #37752 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug