Fix build failure from 287634@main https://bugs.webkit.org/show_bug.cgi?id=284431 rdar://141251913

Reviewed by David Degazio.

JIT operations were not properly registered, meaning that this would cause build
failures later on.

* Source/JavaScriptCore/assembler/JITOperationList.cpp:

Canonical link: https://commits.webkit.org/287647@main